# climate_change_api_example

./: CMakeLists.txt  Dockerfile  cached_value.h  filter_config.json  gumbo_handle.h  gumbo_node_iterator.h  gumbo_util.h  gumbo_vector_iterator.h  main.cpp  newspaper.h  newspapers.json  vcpkg.json
include/: cached_value.h  map_iterator.h  newspaper.h
include/daw/ccae/: cached_value.h  filter_config.h  html_cache.h  link_search.h  newspaper.h  url.h
src/: main.cpp
